--- a/k8s/kinds/namespaces/my-namespace.yaml
+++ b/k8s/kinds/namespaces/my-namespace.yaml
@@ -1,4 +1,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: test
+  name: martingeorgiev
+  labels:
+    apps: web-based
+  annotations:
+    type: demo
