--- a/applications/nginx/load_balancer/nginx.conf
+++ b/applications/nginx/load_balancer/nginx.conf
@@ -39,7 +39,35 @@ http {
         listen 80;
         server_name localhost;
         location / {
+            proxy_set_header Host $host;
             proxy_pass http://martingeorgievcom;
         }
-    }    
+
+        location /excalidraw/ {
+            proxy_set_header Host $host;
+            proxy_pass  http://docker.sofia:5000;
+        }
+
+        location /joomla/ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffering off;
+            proxy_request_buffering off;
+            proxy_http_version 1.1;
+            proxy_intercept_errors on;
+            proxy_pass  http://docker.sofia:32768;
+        }
+
+        location /ec/ {
+            proxy_set_header Host $host;
+            proxy_pass  http://d-infra.sofia:8081;
+        }
+
+        location /covid19/ {
+            proxy_set_header Host $host;
+            proxy_pass  http://d-infra.sofia:8085;
+        }
+    }
 }
